--- a/app/templates/app/post.html
+++ b/app/templates/app/post.html
@@ -26,11 +26,11 @@
                 <div class="timeline">
                   <div class="track">
                     <i class="uil uil-clock"></i>
-                    <p class="time">{{post.last_update|date}}</p>
+                    <p class="time">{{post.last_updated |date}}</p>
                   </div>
                   <div class="track">
                     <i class="uil uil-users-alt"></i>
-                    <p class="view-count">2500+ views</p>
+                   <p class="view-count">{{post.view_count}}view{{post.view_count | pluralize}}</p>
                   </div>
                   <div class="track">
                     <form action="" method="POST">
@@ -105,17 +105,9 @@
                       {{post.content}}
                     </p>
                     <div class="blog-tags">
-                      <div class="tag">Tag content</div>
-                      <div class="tag">Tag content</div>
-                      <div class="tag">Tag content</div>
-                      <div class="tag">Tag content</div>
-                      <div class="tag">Tag content</div>
-                      <div class="tag">Tag content</div>
-                      <div class="tag">Tag content</div>
-                      <div class="tag">Tag content</div>
-                      <div class="tag">Tag content</div>
-                      <div class="tag">Tag content</div>
-                      <div class="tag">Tag content</div>
+                      {% for tag in post.tags.all %}
+                      <div class="tag">{{tag.name}}</div>
+                      {% endfor %}
                     </div>
                     <div class="social-share">
                       <div class="reactions">
@@ -151,8 +143,8 @@
                           <img src="../images/author.svg" alt="" />
                         </div>
                         <div class="details">
-                          <p>Author name</p>
-                          <small>June 20, 2022</small>
+                          <p>Bhargav</p>
+                          <small>{{post.last_updated |date}}</small>
                         </div>
                       </div>
                       <div class="comment-sec-main">
@@ -198,8 +190,8 @@
                               <img src="../images/author.svg" alt="" />
                             </div>
                             <div class="details">
-                              <p>Author name</p>
-                              <small>June 20, 2022</small>
+                              <p>Bhargav</p>
+                              <small>{{post.last_updated |date}}</small>
                             </div>
                           </div>
                           <div class="comment">
@@ -221,8 +213,8 @@
                           <img src="../images/author.svg" alt="" />
                         </div>
                         <div class="details">
-                          <p>Author name</p>
-                          <small>June 20, 2022</small>
+                          <p>Bhargav</p>
+                          <small>{{post.last_updated |date}}</small>
                         </div>
                       </div>
                       <div class="comment-sec-main">
@@ -270,8 +262,8 @@
                           <img src="../images/author.svg" alt="" />
                         </div>
                         <div class="details">
-                          <p>Author name</p>
-                          <small>June 20, 2022</small>
+                          <p>Bhargav</p>
+                          <small>{{post.last_updated |date}}</small>
                         </div>
                       </div>
                       <div class="comment-sec-main">
@@ -322,11 +314,12 @@
                     are marked<span>*</span>
                   </p>
                   <form action="">
-                    <textarea placeholder="Type your comment...."></textarea>
+                    {% csrf_token %}
+                    {{form.content}}
                     <div class="grid-3">
-                      <input type="text" placeholder="Name" />
-                      <input type="temail" placeholder="Email" />
-                      <input type="url" placeholder="Website (optional)" />
+                     {{form.name}}
+                     {{form.email}}
+                     {{form.website}}
                     </div>
                     <button class="btn btn-primary rounded">
                       Post comment
@@ -408,8 +401,8 @@
                         <img src="../images/author.svg" alt="" />
                       </div>
                       <div class="details">
-                        <p>Author name</p>
-                        <small>June 20, 2022</small>
+                        <p>Bhargav</p>
+                        <small>{{post.last_updated |date}}</small>
                       </div>
                     </div>
                   </div>
@@ -435,7 +428,7 @@
                       </div>
                       <div class="details">
                         <p>Author name</p>
-                        <small>June 20, 2022</small>
+                        <small>{{post.last_updated |date}} </small>
                       </div>
                     </div>
                   </div>
