--- a/app/templates/app/post.html
+++ b/app/templates/app/post.html
@@ -2,6 +2,7 @@
 {% extends "base.html" %}
 {% block title %}Blog | The Super Blog{% endblock title %}
 {% block content %}
+{% load static %}
       <div class="container">
         <div class="layout">
           <!-- left layout -->
@@ -54,20 +55,7 @@
                   </div>
                   <div class="blog-post-content">
                     <p>
-                      If you have invested time, energy and money on creating a
-                      website for your business, you know very well that
-                      nowadays virtually every company must have an online
-                      presence. However, having a great website in place is not
-                      a final goal that you can afford to tick and archive. A
-                      website is never something static, and this is why you
-                      should always keep up with change and continuously improve
-                      it. It would help if you thought of your website as a
-                      salesman who represents your company every day and keeps
-                      an eye on what is happening in the field. Competitors will
-                      adopt new strategies, as the needs of your existing and
-                      potential customers evolve. Therefore, there are many good
-                      reasons why you should invest periodically in re-adapting
-                      your website’s content and functionality.
+                      {{post.content |safe}}
                     </p>
                     <br /><br />
                     <p>
@@ -106,7 +94,7 @@
                     </p>
                     <div class="blog-tags">
                       {% for tag in post.tags.all %}
-                      <div class="tag">{{tag.name}}</div>
+                      <a href="{% url 'tag_page' tag.slug %}" class="tag">{{tag.name}}</a>
                       {% endfor %}
                     </div>
                     <div class="social-share">
@@ -136,26 +124,23 @@
                         </div>
                       </div>
                     </div>
+                    {% for comment in comments  %}
                     <!-- comments -->
                     <div class="user-comment">
                       <div class="author">
                         <div class="profile-pic">
-                          <img src="../images/author.svg" alt="" />
+                          <img src="{% static 'images/author.svg' %}" alt="" />
                         </div>
                         <div class="details">
-                          <p>Bhargav</p>
-                          <small>{{post.last_updated |date}}</small>
+                          <p>{{comment.name}}</p>
+                          <small>{{comment.date |date}}</small>
                         </div>
                       </div>
                       <div class="comment-sec-main">
                         <div class="comment-sec">
                           <div class="comment">
                             <p>
-                              Lorem ipsum dolor sit amet consectetur adipisicing
-                              elit. Tempora magnam minima harum, dignissimos
-                              ipsa vero sequi ipsam, distinctio quisquam quo
-                              cupiditate sed recusandae expedita quod iste
-                              maiores rerum. Eaque, dignissimos.
+                             {{comment.content}}
                             </p>
                           </div>
                           <div class="reply">
@@ -168,12 +153,15 @@
                               are marked<span>*</span>
                             </p>
                             <form method="POST">
+                              {% csrf_token %}
                               <textarea name="content" cols="40" rows="10" placeholder="Type your comment...." required id="id_content">
       </textarea>
-                              <div class="grid-3">
-                                <input type="text" name="name" maxlength="200" placeholder="Name" required id="id_name">
-                                <input type="text" name="email" maxlength="200" placeholder="Email" required id="id_email">
-                                <input type="text" name="website" maxlength="200" placeholder="Website" id="id_website">
+                              <div class="grid-3"> 
+                                <input type="hidden"name="post_id" value="{{post.id}}">
+                                <input type="hidden"name="parent" value="{{comment.id}}">
+                                {{forms.name}}
+                                {{forms.email}}
+                                {{forms.website}}
                               </div>
               
                               <button class="btn btn-primary rounded">
@@ -183,143 +171,50 @@
                           </div>  
 
                         </div>
-                        
+                        {% for reply in comment.replies.all  %}
                         <div class="public-reply">
                           <div class="author">
                             <div class="profile-pic">
-                              <img src="../images/author.svg" alt="" />
+                              <img src="{% static 'images/author.svg' %}" alt="" />
                             </div>
                             <div class="details">
-                              <p>Bhargav</p>
-                              <small>{{post.last_updated |date}}</small>
+                              <p>{{reply.name}}</p>
+                              <small>{{reply.date |date}}</small>
                             </div>
                           </div>
                           <div class="comment">
                             <p>
-                              Lorem ipsum dolor sit amet consectetur adipisicing
-                              elit. Tempora magnam minima harum, dignissimos
+                              {{reply.content}}
                             </p>
                           </div>
                         </div>
+                        {% endfor %}
 
                         
 
                       </div>
                     </div>
-                    <!-- user comment -->
-                    <div class="user-comment">
-                      <div class="author">
-                        <div class="profile-pic">
-                          <img src="../images/author.svg" alt="" />
-                        </div>
-                        <div class="details">
-                          <p>Bhargav</p>
-                          <small>{{post.last_updated |date}}</small>
-                        </div>
-                      </div>
-                      <div class="comment-sec-main">
-                        <div class="comment-sec">
-                          <div class="comment">
-                            <p>
-                              Lorem ipsum dolor sit amet consectetur adipisicing
-                              elit. Tempora magnam minima harum, dignissimos
-                              ipsa vero sequi ipsam, distinctio quisquam quo
-                              cupiditate sed recusandae expedita quod iste
-                              maiores rerum. Eaque, dignissimos.
-                            </p>
-                          </div>
-                          <div class="reply">
-                            <button onclick="toggleDiv(this)">Reply</button>
-                          </div>
-                        </div>
-                        <div class="comment-box" id="comment-reply-box">
-                          <h3>Reply to post</h3>
-                          <p>
-                            Your email address will not be published. Required fields
-                            are marked<span>*</span>
-                          </p>
-                          <form method="POST">
-                            <textarea name="content" cols="40" rows="10" placeholder="Type your comment...." required id="id_content">
-    </textarea>
-                            <div class="grid-3">
-                              <input type="text" name="name" maxlength="200" placeholder="Name" required id="id_name">
-                              <input type="text" name="email" maxlength="200" placeholder="Email" required id="id_email">
-                              <input type="text" name="website" maxlength="200" placeholder="Website" id="id_website">
-                            </div>
-            
-                            <button class="btn btn-primary rounded">
-                              Post Reply
-                            </button>
-                          </form>
-                        </div>  
-                      </div>
-                    </div>
-                    <!-- user comment end -->
-                    <!-- user comment -->
-                    <div class="user-comment">
-                      <div class="author">
-                        <div class="profile-pic">
-                          <img src="../images/author.svg" alt="" />
-                        </div>
-                        <div class="details">
-                          <p>Bhargav</p>
-                          <small>{{post.last_updated |date}}</small>
-                        </div>
-                      </div>
-                      <div class="comment-sec-main">
-                        <div class="comment-sec">
-                          <div class="comment">
-                            <p>
-                              Lorem ipsum dolor sit amet consectetur adipisicing
-                              elit. Tempora magnam minima harum, dignissimos
-                              ipsa vero sequi ipsam, distinctio quisquam quo
-                              cupiditate sed recusandae expedita quod
-                              iste maiores rerum. Eaque, dignissimos.
-                            </p>
-                          </div>
-                          <div class="reply">
-                            <button onclick="toggleDiv(this)">Reply</button>
-                          </div>
-
-                          <div class="comment-box" id="comment-reply-box">
-                            <h3>Reply to post</h3>
-                            <p>
-                              Your email address will not be published. Required fields
-                              are marked<span>*</span>
-                            </p>
-                            <form method="POST">
-                              <textarea name="content" cols="40" rows="10" placeholder="Type your comment...." required id="id_content">
-      </textarea>
-                              <div class="grid-3">
-                                <input type="text" name="name" maxlength="200" placeholder="Name" required id="id_name">
-                                <input type="text" name="email" maxlength="200" placeholder="Email" required id="id_email">
-                                <input type="text" name="website" maxlength="200" placeholder="Website" id="id_website">
-                              </div>
-              
-                              <button class="btn btn-primary rounded">
-                                Post Reply
-                              </button>
-                            </form>
-                          </div>  
-                        </div>
-                      </div>
-                    </div>
-                    <!-- user comment end -->
+                    {% endfor %}
+                    <!-- comment end -->
+      
+  
                   </div>
                 </div>
+                
                 <div class="comment-box">
                   <h3>Leave a new comment to this post</h3>
                   <p>
                     Your email address will not be published. Required fields
                     are marked<span>*</span>
                   </p>
-                  <form action="">
+                  <form method="POST">
                     {% csrf_token %}
-                    {{form.content}}
+                    {{forms.content}}
                     <div class="grid-3">
-                     {{form.name}}
-                     {{form.email}}
-                     {{form.website}}
+                      <input type="hidden"name="post_id" value="{{post.id}}">
+                     {{forms.name}}
+                     {{forms.email}}
+                     {{forms.website}}
                     </div>
                     <button class="btn btn-primary rounded">
                       Post comment
