--- a/templates/base.html
+++ b/templates/base.html
@@ -27,22 +27,31 @@
   <body>
     <header>
       <div class="container container-fluid">
-        <div class="logo">
+        <a class="logo" href={% url 'index' %} >
           <i class="fa-brands fa-blogger"></i>
-        </div>
+        </a>
         <div class="links">
-          <a href="index.html">Home</a>
-          <a href="pages/blog.html">Blog</a>
-          <a href="pages/author.html">Author</a>
+          <a href="{% url 'index'  %}">Home</a>
+          <a href="{% url 'about'  %}">About</a>
+          <a href="{% url 'index'  %}">All Post</a>
+          <a href="{% url 'search' %}" onclick="searchbar()">Search <i class="fa fa-search"></i>
+</a>
         </div>
         <div class="action-btn">
-          <a href="pages/login.html"
-            ><button class="btn btn-scoundary">Login</button></a
+          {% if user.is_authenticated %}
+            <form method="post" action="{% url 'logout' %}" style="display:inline;">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-scoundary">
+                  
+                Logout
+            </button>
+            </form>
+
+          {% else %}
+          <a href="{% url 'login' %}" class="btn btn-scoundary">Login</a>
+          <a href="{% url 'register' %}" class="btn btn-primary">Sign Up</a
           >
-          <a href="pages/signup.html">
-            <button class="btn btn-primary">Sign Up</button></a
-          >
-          <i class="uil uil-align-center-alt menu" onclick="menu()"></i>
+          <i class="uil uil-align-center-alt menu" onclick="menu()"></i>{% endif %}
         </div>
       </div>
     </header>
@@ -59,7 +68,7 @@
           <div class="link">
             <h2>Quick link</h2>
             <div class="q-link">
-              <a href="#">Home</a>
+              <a href="{% url 'index'  %}">Home</a>
               <a href="#">Blog</a>
               <a href="#">Unsubscribe</a>
             </div>
@@ -67,9 +76,9 @@
           <div class="link">
             <h2>Top cetagory</h2>
             <div class="q-link">
-              <a href="#">Home</a>
-              <a href="#">Blog</a>
-              <a href="#">Unsubscribe</a>
+              <a href="{% url 'index'  %}">Home</a>
+              <a href="{% url 'about' %}">About</a>
+              <a href="#">All post</a>
             </div>
           </div>
           <div class="news-signup">
@@ -107,6 +116,6 @@
         </div>
       </div>
     </footer>
-    <script src="url.js" id="url"></script>
+    <script src="{% static 'app/url.js' %}" id="url"></script>
   </body>
 </html>
