--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Blog |Welcome{% endblock title %}
+{% block title %} Blog | Welcome{% endblock title %}
 {% block content %}
     <main class="sp">
       <div class="container">
@@ -99,7 +99,7 @@
           <!-- card end-->
         </div>
         <center>
-          <a href=""><button class="btn btn-primary rounded view">
+          <a href="{% url "all_posts" %}"><button class="btn btn-primary rounded view">
             View more <span class="material-icons"> trending_flat </span>
           </button></a>
         </center>
@@ -139,7 +139,7 @@
           {% endfor %}
         </div>
         <center>
-          <a href=""><button class="btn btn-primary rounded view">
+          <a href="{% url "all_posts" %}"><button class="btn btn-primary rounded view">
             View more <span class="material-icons"> trending_flat </span>
           </button></a>
         </center>
