--- a/app/templates/app/post.html
+++ b/app/templates/app/post.html
@@ -34,14 +34,32 @@
                    <p class="view-count">{{post.view_count}}view{{post.view_count | pluralize}}</p>
                   </div>
                   <div class="track">
-                    <form action="" method="POST">
+                    {% if user.is_authenticated %}
+                    <form action="{% url "bookmark" post.slug %}" method="POST">
+                      {% csrf_token %}
+                      <input type="hidden" name="post_id" value="{{post.id}}">
+                      {% if is_bookmarked %}
+                      <button type="submit" class="btn btn-info">
+                        <i class="fa-solid fa-bookmark"></i>
+                        <p class="bookmark">Remove Bookmark</p>
+                        <!-- REMOVE BOOKMARK
+                          <i class="fa-solid fa-bookmark"></i> -->
+                      </button>
+                      {% else %}
                       <button type="submit" class="btn btn-info">
                         <i class="uil uil-bookmark-full"></i>
                         <p class="bookmark">Bookmark</p>
                         <!-- REMOVE BOOKMARK
                           <i class="fa-solid fa-bookmark"></i> -->
                       </button>
+                      {% endif %}
                     </form>
+                    {% else %}
+                    <a class="track" href="{% url 'login' %}">
+                        <i class="uil uil-bookmark-full"></i>
+                        <p class="bookmark">Bookmark</p>
+                    </a><br>
+                    {% endif %}
                   </div>
                 </div>
               </div>
@@ -100,8 +118,28 @@
                     <div class="social-share">
                       <div class="reactions">
                         <div class="likes">
-                          <i class="uil uil-heart"></i> <span>200</span>
+                         {% if user.is_authenticated %}
+                            <form action="{% url "like" post.slug %}" method="POST">
+                              {% csrf_token %}
+                              <input type="hidden" name="post_id" value="{{post.id}}">
+                              {% if post_is_liked %}
+                                <button type="submit">
+                                  <i class="fa-solid fa-heart "></i> <span>99{{ number_of_likes }}</span>
+                                </button>
+                              {% else %}
+                                <button type="submit">   
+                                  <i class="uil uil-heart"></i> <span>99{{ number_of_likes }}</span>
+                                </button>
+                              {% endif %}
+                            </form>
+                         {% else %}
+                           <a class="track" href="{% url 'login' %}">
+                             <i class="uil uil-heart"></i><span>99{{ number_of_likes }}</span>
+                            </a><br>
+                          {% endif %}
                         </div>
+                        
+                        
                         <div class="total-comments">
                           <i class="uil uil-comment-alt"></i>
                           <span>10</span>
