--- a/templates/base.html
+++ b/templates/base.html
@@ -33,18 +33,21 @@
         <div class="links">
           <a href="{% url 'index'  %}">Home</a>
           <a href="{% url 'about'  %}">About</a>
-          <a href="{% url 'index'  %}">All Post</a>
-          <a href="{% url 'search' %}" onclick="searchbar()">Search <i class="fa fa-search"></i>
-</a>
+          <a href="{% url 'all_posts'  %}">All Post</a>
+          {% if user.is_authenticated %}
+          <a href="{% url 'allbookmarked'  %}" style="display:inline;">Bookmarks</a>
+          <a href="{% url 'all_liked_posts'  %}" style="display:inline;">Likes</a>
+          {% endif %}
+          <a href="{% url 'search' %}" onclick="searchbar()">Search <i class="fa fa-search"></i></a>
+          
+          
+          
         </div>
         <div class="action-btn">
           {% if user.is_authenticated %}
             <form method="post" action="{% url 'logout' %}" style="display:inline;">
               {% csrf_token %}
-              <button type="submit" class="btn btn-scoundary">
-                  
-                Logout
-            </button>
+              <button type="submit" class="btn btn-scoundary">Logout</button>
             </form>
 
           {% else %}
@@ -69,17 +72,27 @@
             <h2>Quick link</h2>
             <div class="q-link">
               <a href="{% url 'index'  %}">Home</a>
-              <a href="#">Blog</a>
-              <a href="#">Unsubscribe</a>
+              <a href="{% url "search" %}">Search</a>
+              <a href="{% url "about" %}">About</a>
             </div>
           </div>
           <div class="link">
+            {% if user.is_authenticated %}
             <h2>Top cetagory</h2>
             <div class="q-link">
-              <a href="{% url 'index'  %}">Home</a>
-              <a href="{% url 'about' %}">About</a>
-              <a href="#">All post</a>
+              <a href="{% url 'all_liked_posts'  %}">LIKES</a>
+              <a href="{% url 'allbookmarked' %}">Bookmarks</a>
+              <a href="{% url "all_posts" %}">All post</a>
             </div>
+            
+            {% else %}
+            <div class="q-link">
+              <h2>Register</h2>
+            
+              <a href="{% url 'login'  %}">login</a>
+              <a href="{% url 'register' %}">Register</a>
+            </div>
+            {% endif %}
           </div>
           <div class="news-signup">
             <h2>Subscribe</h2>
@@ -100,16 +113,16 @@
         </div>
         <div class="share">
           <div class="social">
-            <a href="#">
+            <a href="https://www.facebook.com/login.php/">
               <i class="fa-brands fa-facebook-f"></i>
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/">
               <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="#">
+            <a href="https://www.linkedin.com/home">
               <i class="fa-brands fa-linkedin-in"></i>
             </a>
-            <a href="#">
+            <a href="https://x.com/i/flow/login">
               <i class="fa-brands fa-twitter"></i>
             </a>
           </div>
